src/App.css
.App {
  float: left;
  width: 100%;
  height: 100%;
  position: absolute;
}

.leftSide {
  float: left;
  width: 35%;
  background: gray;
  height: 100%;
  text-align: left;
  padding-top: 18px;
  position: fixed;
  overflow-y: auto;
}

h1 {
  padding-left: 10px;
}

main {
  height: 100%;
  width: 100%;
  padding-left: 35%;
  display: inline;
}

.rooms td {
  border: none;
}

.roomForm {
  margin-top: 20px;
}

.roomList {
  padding-left: 10px;
}

.roomName:hover {
  opacity: 1;
  cursor: pointer;
}

.roomName {
  opacity: .6;
}

.authentication {
   position:fixed;
   bottom:0;
   height:30px;
   width: 33.5%;
   padding-left: 10px;
   background: gray;
   padding-top: 5px;
}

.messageList {
  padding-left: 35%;
}

.messages .message:nth-child(odd) {
  background: gray;
}

.messages {
  width: 65%;
  position: absolute;
  border-collapse: collapse;
}

.messageForm {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 65%;
  margin-left: 35%;
  color: white;
  height: 40px;
}

input:focus {
  outline: none;
}

.newMessage {
  width: 80%;
  height: 100%;
  font-size:24px;
}

.messageSubmit {
  width: 18.7%;
  background-color: gray;
  height: 53px;
  border: none;
  color: white;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

.time {
  float: right;
}

.messageInfo .user {
  padding-left: 10px;
  font-weight: bold;
}

.time {
  padding-left: 10px;
}

.messageButtons {
  float: right;
}

.content {
  margin-top: 5px;
  padding-left: 10px;
}

